# JB-WM-backend

./: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml  railpack.json
app/: main.py  seed.py
app/adapters/: __init__.py
app/agent/: codex_adapter.py  codex_sdk_model.py  context_builder.py  errors.py  orchestrator.py  pydantic_ai_reasoner.py  runtime.py  schemas.py  stub_reasoner.py
app/agent_jobs/: __init__.py  dispatcher.py  local_stub.py
app/api/: deps.py  errors.py
app/core/: auth.py  config.py  database.py  logging.py
app/executor/: handlers.py
app/mcp/: __init__.py  read_server.py  read_tools.py
app/mock_data/: demo_customers.json
app/models/: __init__.py  agent.py  auth.py  base.py  customer.py  finance.py  health.py  insurance.py  memory.py  privacy.py  stats.py  workflow.py
app/planning/: __init__.py  schemas.py  validators.py
docs/: 00_READING_ORDER.md  01_PRODUCT_CONTEXT.md  02_SYSTEM_ARCHITECTURE.md  03_STATE_MACHINE.md  04_AGENT_RUNTIME.md  05_DATA_MODEL.md  06_TOOL_CONTRACTS.md  07_ACTION_EXECUTION.md  08_MEMORY.md  09_API_SPEC.md  10_SECURITY_PRIVACY.md  11_IMPLEMENTATION_ROADMAP.md  12_IMPLEMENTATION_CHECKLIST.md  13_LLM_DECISION_CONTEXT.md  14_LANGGRAPH_AGENT_REDESIGN.md  CODEX_ADAPTER.md  ENVIRONMENT_VARIABLES.md  RUNBOOK.md  SETUP.md  STATS_SOURCES.md
policy_docs/: action_capability_boundary.md  medical_financial_boundary.md  statistics_usage_policy.md
scripts/: benchmark_codex_cli_models.py  codex_smoke_test.py  install.sh  pydantic_ai_smoke.py
webapp/: index.html  package-lock.json  package.json
(+71 files in other folders)
