[project]
name = "jb-wm-backend"
version = "0.1.0"
description = "JB WM — 능동형 Life Event Agent 백엔드"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "pydantic>=2.12",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "psycopg2-binary>=2.9",
    "openai-codex>=0.1.0b2",
    # openai-codex-cli-bin은 openai-codex의 전이 의존성.
    # glibc Linux(Ubuntu/WSL)에서는 musl 휠 강제 설치가 필요 → scripts/install.sh 참고.
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
